--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^1.0.0"
+  },
+  "devDependencies": {
+    "purgecss": "^4.1.3"
   }
 }
