--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "@11ty/eleventy": "^1.0.0"
   },
   "devDependencies": {
-    "purgecss": "^4.1.3"
+    "eleventy-plugin-purgecss": "^0.2.1"
   }
 }
