made changes for live website

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nwasst",
+  "name": "nwa-second-stage-transition.github.io",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
