--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@11ty/eleventy": "^1.0.0"
   },
   "devDependencies": {
-    "eleventy-plugin-purgecss": "^0.2.1"
+    "eleventy-plugin-purgecss": "^0.2.1",
+    "postcss": "^8.4.16",
+    "postcss-cli": "^10.0.0"
   }
 }
