--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@11ty/eleventy": "^1.0.0"
   },
   "devDependencies": {
-    "bootstrap": "^5.2.1",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "clean-css": "^5.3.1",
     "eleventy-plugin-purgecss": "^0.2.1",
     "postcss": "^8.4.16",
-    "postcss-cli": "^10.0.0",
-    "purify-css": "^1.2.5"
+    "postcss-cli": "^10.0.0"
   }
 }
