--- a/docs/admin/config.yml
+++ b/docs/admin/config.yml
@@ -18,7 +18,9 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Subitle", name: "subtitle", widget: "string"}
       - {label: "Description", name: "description", widget: "string"}
+      - {label: "Robots", name: "robots", widget: "hidden", default: "noindex"}
       - {label: "Author", name: "author", widget: "string", default: "Cecelia"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Tags", name: "tags", widget: "list", default: ["post"] }
